# jiudian-video-control

./: .gitignore  install.bat  install.ps1
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/jiudian/videocontrol/: MainActivity.kt
android/app/src/main/kotlin/com/jiudian/videocontrol/ui/: MainViewModel.kt  NavGraph.kt
android/app/src/main/kotlin/com/jiudian/videocontrol/ui/theme/: Type.kt  (+3 more)
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
server/: pyproject.toml  requirements.txt
server/installer/: setup.iss
server/src/jiudian_server/: __init__.py  __main__.py  app.py
server/src/jiudian_server/api/: __init__.py  models.py  routes.py  server.py  websocket.py
server/src/jiudian_server/capture/: __init__.py  directshow.py  enumerate.py  enumerate_windows.py  manager.py  source.py  test_patterns.py  window_capture.py
server/src/jiudian_server/compositing/: __init__.py  models.py  pipeline.py  renderer.py  transitions.py
server/src/jiudian_server/config/: __init__.py  defaults.py  models.py  persistence.py  settings.py
server/src/jiudian_server/gui/: __init__.py  main_window.py  theme.py  widgets.py
server/src/jiudian_server/i18n/: __init__.py  en.json  zh_tw.json
server/src/jiudian_server/output/: __init__.py  display.py  preview.py  sink.py
server/src/jiudian_server/utils/: __init__.py  log.py  qr_code.py
shared/api-schema/: openapi.yaml
(+9 files in other folders)
